// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen tenants config import-export] should create the tenants: the tenants have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ tenant [cfgObjectTest]
Completed. 1 object created. 0 object updated. 0 object skipped.
",
}
`;

exports[`[mutagen tenants config import-export] should skip the same tenants: the tenants have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "= tenant [cfgObjectTest]
Completed. 0 object created. 0 object updated. 1 object skipped.
",
}
`;

exports[`[mutagen tenants config import-export] should update the modified tenants: the modified tenants have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ tenant [cfgObjectTest]
Completed. 0 object created. 1 object updated. 0 object skipped.
",
}
`;
